...

    var title: String {
        switch self {
        case .home: return "ホーム"
        case .indicators: return "指標"
        case .calendar: return "カレンダー"
        case .search: return "検索"
        case .settings: return "設定"
        }
    }

    var icon: String {
        switch self {
...
